updates to PEX2; Got off work early and made a few changes. It is soo close.

--- a/PEX2-AES_Encryption_Library/Makefile
+++ b/PEX2-AES_Encryption_Library/Makefile
@@ -58,7 +58,7 @@ pmain: $(BDIR)/$(PNAME)
 tmain: $(BDIR)/test
 $(PNAME): | toolchain pmain
 test: | toolchain tmain
-	./$(BDIR)/crypto
+	./$(BDIR)/test
 
 $(DDIR):
 	@mkdir $(DDIR)
